# openfhe-wasm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  package.json
examples/js/binfhe/: boolean.js  boolean_serial.js
examples/js/pke/: backend_size.js  pre_buffer.js  setting_precompute_crt_tables.js  simple_integer.js  simple_integer_bgvrns.js  simple_integer_serialization.js  simple_real_number.js  threshold_fhe.js  threshold_fhe_bfv.js
src/binfhe/: BinFHEContext_em.cpp  CMakeLists.txt  binfhe_serial_em.h  binfhe_types.h
src/core/: CMakeLists.txt  Plaintext_em.h  backend_em.h  clear_context.h  dcrtpoly_em.h  exception_em.h  palisade_em.h  parameters.h  print.h  serial_em.h  version_em.h  wrapped.h
src/pke/: CMakeLists.txt  CryptoContext_em.cpp  pke_serial_em.h  pubkeylp_em.h
unittest/: README.md  UnitTestCompress.mjs  UnitTestEvalFastRotation.mjs  UnitTestEvalInnerProduct.mjs  UnitTestEvalLinearWSum.mjs  UnitTestEvalMerge.mjs  UnitTestEvalMultMany.mjs  UnitTestEvalNegate.mjs  common.mjs
